2016-01-07  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (assign_keyinfo): Delete two unneeded #ifdefs: if
	they /could/ be false, the H and E keys would stop working.
	* src/global.c (assign_keyinfo): Add a comment and use a symbol.

2016-01-04  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (shortcut_init): Nowadays the functions are defined
	only once, so there is no longer any need to free existing ones.
	* src/global.c (sctofunc): Rewrite the loop, and constify the input.
	* src/text.c (do_linter): Condense the exit code.
	* src/nano.c (allow_sigwinch): Improve its name and its comments.
	* src/global.c (shortcut_init): Add "Tab" as key description.
	* src/text.c (do_linter): Gettextize a forgotten string.
	* src/global.c (assign_keyinfo): Make "Tab" produce the appropriate
	keycode.  This fixes Savannah bug #46812 reported by Cody A. Taylor.

2016-01-04  Mike Frysinger  <vapier@gentoo.org>
	* src/global.c (strtosc, strtomenu): Constify the input parameter.

2016-01-03  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_deletion), src/nano.c (do_input): Let reset_multis()
	figure out whether after a deletion a full refresh is needed, before
	doing a redraw of the current line.  This fixes Savannah bug #46794.
	* src/nano.c (do_output): Let reset_multis() figure out whether after
	an addition a full refresh is needed (for multiline-regexes' sake),
	instead of doing it always.
	* src/color.c (reset_multis): Abort when having no multiline regexes.
	* src/nano.c (do_input): A functionless shortcut should be impossible.
	* src/nano.c (do_input): Adjust indentation.

2016-01-02  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_spell, do_formatter): Plug three tiny memory leaks.
	* src/text.c (do_alt_speller, do_formatter): There is no need here to
	reinitialize the windows; it will be done when polling the keybuffer.
	* src/winio.c (do_credits): Correctly restore the settings of NO_HELP
	and MORE_SPACE.
