@@ -1,3 +1,8 @@
+2016-01-09  Benno Schulenberg  <bensberg@justemail.net>
+	* src/color.c (precalc_multicolorinfo), src/winio.c (edit_draw):
+	Make sure to keep advancing also when matches are zero-length.
+	This fixes Savannah bug #26977 reported by Tigrmesh.
+
 2016-01-07  Benno Schulenberg  <bensberg@justemail.net>
 	* src/global.c (assign_keyinfo): Delete two unneeded #ifdefs: if
 	they /could/ be false, the H and E keys would stop working.
